fix: update CORS configuration to allow all headers